force-app/main/default/objects/EmployeeFieldSetting__c/EmployeeFieldSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Employee Field Setting</label>
</CustomObject>