force-app/main/default/objects/EmployeeFieldSetting__c/fields/addEmployeeFields__c.field-meta.xml
<CustomField>
    <fullName>addEmployeeFields__c</fullName>
    <label>addEmployeeFields</label>
    <type>TextArea</type>
</CustomField>