force-app/main/default/objects/EmployeeFieldSetting__c/fields/Export_field__c.field-meta.xml
<CustomField>
    <fullName>Export_field__c</fullName>
    <label>Export field</label>
    <type>TextArea</type>
</CustomField>