force-app/main/default/objects/EmployeeFieldSetting__c/fields/fields__c.field-meta.xml
<CustomField>
    <fullName>fields__c</fullName>
    <label>Fields</label>
    <type>TextArea</type>
</CustomField>